<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dovah.muse_hic.RecentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#ffffff" />

    <ImageView
        android:id="@+id/album_playing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:contentDescription="@string/album_player"
        android:scaleType="fitXY"
        android:src="@drawable/album_standard" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:max="100"
        android:progress="20" />

    <TextView
        android:id="@+id/song_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/default_playertext"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/prev"
            android:src="@drawable/ic_prev" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/ic_pause" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_next" />

    </LinearLayout>
</LinearLayout>

